--- a/jaeger/kustomization.yaml
+++ b/jaeger/kustomization.yaml
@@ -1,3 +1,6 @@
 resources:
   - https://github.com/cert-manager/cert-manager/releases/download/v1.14.4/cert-manager.yaml
   - https://github.com/jaegertracing/jaeger-operator/releases/download/v1.54.0/jaeger-operator.yaml
+
+patchesStrategicMerge:
+  - patch.yaml
